# data-programming-with-python

./: .gitignore  README.md  pyproject.toml
2023-fall/: README.md
2023-fall/2023-08-22/: README.md
2023-fall/2023-08-29/: README.md
2023-fall/2023-09-05/: README.md
2023-fall/2023-09-12/: README.md
2023-fall/2023-09-19/: README.md
2023-fall/2023-09-26/: README.md
2023-fall/2023-10-03/: README.md
2023-fall/2023-10-10/: README.md
2023-fall/2023-10-17/: README.md
2023-fall/2023-10-24/: README.md
2023-fall/2023-10-31/: README.md
2023-fall/2023-11-07/: README.md
2023-fall/2023-11-14/: README.md
2023-fall/final/: README.md  rubrics.tex  rubrics_plus.md  suggested_topics.md
2023-summer/: README.md
2023-summer/2023-06-05/: README.md
2023-summer/2023-06-12/: README.md
2023-summer/2023-06-28/: README.md
2023-summer/2023-07-05/: README.md
2023-summer/2023-07-12/: README.md
2023-summer/final/: README.md
2023-summmer/: README.md
2023-summmer/2023-06-05/: README.md  code_environment.md
2023-summmer/2023-06-07/: README.md
2023-summmer/2023-06-12/: README.md
2023-summmer/2023-06-14/: README.md
2023-summmer/2023-06-21/: README.md
2023-summmer/2023-06-26/: README.md
2023-summmer/2023-06-28/: README.md
2023-summmer/2023-07-03/: README.md
2023-summmer/2023-07-10/: README.md
2023-summmer/2023-07-10/data/: test.csv
2023-summmer/2023-07-12/: README.md
2023-summmer/2023-07-17/: README.md
2023-summmer/2023-07-19/: README.md
2023-summmer/final/: README.md
docs/: campus_resources.md  code_environment.md
syllabus/: data-programming-section002-summer-2023.tex  data-programming-section008-fall-2023.tex
utils/: generate_folders.py
(+70 files in other folders)
