[tool.poetry]
name = "data-programming-with-python"
version = "0.1.0"
description = "MSA8010 @ GSU"
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
readme = "README.md"
packages = [{include = "data_programming_with_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
jupyterlab = "^4.0.1"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
