[tool.poetry]
name = "data-programming-with-python"
version = "0.1.0"
description = "MSA8010 @ GSU"
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
readme = "README.md"
packages = [{include = "data_programming_with_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
jupyterlab = "^4.0.1"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
notebook = ">=6.5.4"
xlrd = "^2.0.1"
statsmodels = "^0.14.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.0"
graphviz = "^0.20.1"
plotly = "^5.17.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
